Fix cover edit label z-index, for real this time.

--- a/app/assets/stylesheets/partials/user-cover-image.css.scss
+++ b/app/assets/stylesheets/partials/user-cover-image.css.scss
@@ -22,6 +22,7 @@
       transition: .2s ease-in;
       display: none;
       padding-top: 70px;
+      z-index: 9;
       &:hover {
         background: rgba(0,0,0,.8);
       }
